--- a/package.json
+++ b/package.json
@@ -19,8 +19,13 @@
   },
   "dependencies": {
     "@pinia/nuxt": "^0.5.1",
+    "bcryptjs": "^2.4.3",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
+    "moment": "^2.29.4",
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.1",
+    "multer": "^1.4.5-lts.1",
     "postman": "^0.2.0",
     "sass": "^1.69.5",
     "sass-loader": "^13.3.2"
