--- a/package.json
+++ b/package.json
@@ -12,17 +12,15 @@
   "devDependencies": {
     "@nuxt/devtools": "latest",
     "@nuxt/image": "^1.0.0",
-    "@nuxtjs/tailwindcss": "^6.9.5",
     "nuxt": "^3.8.1",
     "vue": "^3.3.8",
     "vue-router": "^4.2.5"
   },
   "dependencies": {
+    "@morev/vue-transitions": "^2.3.6",
     "@pinia/nuxt": "^0.5.1",
     "bcryptjs": "^2.4.3",
-    "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
-    "moment": "^2.29.4",
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.1",
     "multer": "^1.4.5-lts.1",
