--- a/package.json
+++ b/package.json
@@ -7,12 +7,21 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "test": "vitest"
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
     "@nuxt/image": "^1.0.0",
+    "@testing-library/vue": "^8.0.1",
+    "eslint": "^8.22.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-nuxt": "^4.0.0",
+    "eslint-plugin-standard": "^5.0.0",
+    "eslint-plugin-vue": "^8.3.0",
+    "happy-dom": "^12.10.3",
     "nuxt": "^3.8.1",
+    "vitest": "^1.0.4",
     "vue": "^3.3.8",
     "vue-router": "^4.2.5"
   },
