--- a/package.json
+++ b/package.json
@@ -13,14 +13,20 @@
   "devDependencies": {
     "@nuxt/devtools": "latest",
     "@nuxt/image": "^1.0.0",
+    "@nuxtjs/eslint-config": "^12.0.0",
+    "@nuxtjs/eslint-config-typescript": "^12.1.0",
     "@testing-library/vue": "^8.0.1",
-    "eslint": "^8.22.0",
-    "eslint-config-standard": "^17.0.0",
+    "@typescript-eslint/parser": "^6.14.0",
+    "eslint": "^8.56.0",
+    "eslint-config-standard": "^17.1.0",
     "eslint-plugin-nuxt": "^4.0.0",
+    "eslint-plugin-prettier": "^5.0.1",
     "eslint-plugin-standard": "^5.0.0",
-    "eslint-plugin-vue": "^8.3.0",
+    "eslint-plugin-vue": "^8.7.1",
     "happy-dom": "^12.10.3",
     "nuxt": "^3.8.1",
+    "prettier": "^3.1.1",
+    "typescript": "^5.3.3",
     "vitest": "^1.0.4",
     "vue": "^3.3.8",
     "vue-router": "^4.2.5"
