--- a/package.json
+++ b/package.json
@@ -32,10 +32,11 @@
     "vue-router": "^4.2.5"
   },
   "dependencies": {
-
     "@morev/vue-transitions": "^2.3.6",
     "@nuxt/http": "^0.6.4",
     "@pinia/nuxt": "^0.5.1",
+    "@vuelidate/core": "^2.0.3",
+    "@vuelidate/validators": "^2.0.4",
     "@vuepic/vue-datepicker": "^7.2.2",
     "bcryptjs": "^2.4.3",
     "jsonwebtoken": "^9.0.2",
