--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "@vuepic/vue-datepicker": "^7.2.2",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.6",
+    "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.29.4",
     "mongodb": "^6.3.0",
