--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
+    "cookie-universal-nuxt": "^2.2.2",
     "express-validator": "^7.0.1",
     "http": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
