--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@nuxtjs/eslint-config": "^12.0.0",
     "@nuxtjs/eslint-config-typescript": "^12.1.0",
     "@testing-library/vue": "^8.0.1",
+    "@types/jsonwebtoken": "^9.0.5",
     "@typescript-eslint/parser": "^6.14.0",
     "eslint": "^8.56.0",
     "eslint-config-standard": "^17.1.0",
@@ -51,6 +52,7 @@
     "mongoose": "^8.0.1",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.8",
+    "ofetch": "^1.3.3",
     "pinia": "^2.1.7",
     "postman": "^0.2.0",
     "sass": "^1.69.5",
